--- a/src/components/form/input.module.css
+++ b/src/components/form/input.module.css
@@ -14,7 +14,7 @@
     border-radius:  0;
     border: .5px solid #5c5c5c;
     border-radius: 2px;
-    background-color: transparent;
+    background-color: #141414;
     caret-color: white;
     color: #fff;
 }
