crud services and add new service

--- a/src/components/form/Select.module.css
+++ b/src/components/form/Select.module.css
@@ -15,7 +15,7 @@
     border: .5px solid #5c5c5c;
     border-radius: 2px;
     background-color: #141414;
-    color: #b8b8b8;
+    color: #fff;
 }
 
 
