--- a/src/components/form/SubmitButton.module.css
+++ b/src/components/form/SubmitButton.module.css
@@ -1,16 +1,16 @@
 .btn {
-    background-color: #a2761f;
-    color: #fff;
-    padding: 0.7em 1.2em;
-    cursor: pointer;
-    border: none;
-    font-weight: 700;
-    transition: .5s;
-    margin-top: 1em;
-    width: 100%;
+  background-color: #222;
+  color: #ffbb33;
+  padding: 0.7em 1.2em;
+  cursor: pointer;
+  border: 1px solid #7a7a7a;
+  font-weight: 700;
+  transition: 0.5s;
+  margin-top: 1em;
 }
 
-.btn:hover{
-    transform: scale(1.02);
-    font-weight: 700;
+.btn:hover {
+  background-color: #fff;
+  color: #222;
 }
+
