--- a/src/components/pages/NewProject.module.css
+++ b/src/components/pages/NewProject.module.css
@@ -1,22 +1,24 @@
 .newproject_container {
-    width: 500px;
-    margin: 0 auto;
-    padding: 3em;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
+  width: 500px;
+  margin: 0 auto;
+  padding: 3em;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.newproject_container button {
+  width: 100%;
 }
 
 .newproject_container h1 {
-    margin-bottom: .5em;
-    text-align: center;
-   
+  margin-bottom: 0.5em;
+  text-align: center;
 }
 
 .newproject_container p {
-    color: #b7b7b7;
-    text-align: center;
-  
+  color: #b7b7b7;
+  text-align: center;
 }
+
