--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -1,42 +1,101 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    background-color: #141414;
-    padding: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  background-color: #141414;
+  padding: 1.5em;
+  position: relative;
+}
+
+.burguer {
+  font-size: 1.3em;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+}
+
+.icon {
+  font-size: 1.3em; 
+  color: #fff; 
 }
 
 .list {
-    display: flex;
-    list-style: none;
-    align-items: center;
+  display: flex; 
+  list-style: none;
+  align-items: center;
 }
 
 .logo {
-    color: #fff;
-    font-weight: 700;
-    text-decoration: none;
-    font-size: 1.2rem;
+  color: #fff;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
 
 .ye_color {
-    color: #ffbb33;
-    font-weight: 800;
-    
+  color: #ffbb33;
+  font-weight: 800;
 }
 
 .item {
-    margin-right: 2em;
-    font-size: 1.1rem;
+  margin-right: 2em;
+  font-size: 1.1rem;
 }
 
 .item a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-    transition: .4s;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  transition: 0.4s;
 }
 
 .item a:hover {
-    color: #ffbb33;
-    font-weight: 600;
+  color: #ffbb33;
+  font-weight: 600;
 }
+
+.menu-box {
+  display: none;
+}
+
+@media (max-width: 990px) {
+  .burguer {
+    display: flex;
+    align-items: center;
+  }
+
+  .list {
+    display: none;
+  }
+
+  .menu-box {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    background-color: #141414;
+    border-radius: 3px;
+    padding: 2em;
+    z-index: 100;
+  }
+
+  .menu-box.open {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2.5em;
+  }
+
+  .menu-box a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: 0.3s;
+  }
+
+  .menu-box a:hover {
+    color: #ffbb33;
+  }
+}
+
+
